- Added new elements to allow for the correct spacing of the background image  - Added the Audio element

--- a/stylesheets/clarkMusic.css
+++ b/stylesheets/clarkMusic.css
@@ -1,9 +1,26 @@
 body {
-	/*background-color: black;*/
-	background-image: url("Images/Nick_clark.jpg");
+	width: auto;
+	margin-left: 0px;
 }
-/*
-div {
-	display: inline;
-	border-style: solid;
-}*/
+
+div#proggerPrelude {
+	position: relative;
+	padding: 20px;
+	margin: auto;
+	width: 100%;
+	height: 100%;
+	background-image: url("Images/Nick_clark.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
+.playerSpan {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+}
+
+audio {
+	position: absolute;
+	top: 25%;
+}
